2008-05-02  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/EditActions.cs: fixed Bug 383946 – Text
	  editor deletes "matching" braces

2008-04-30  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed null
	  reference when typing.

2008-04-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Wrap info comments
	  if they are wider than the screen, and move them inwards if they 
	  extend offscreen.
	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Use TooltipWindow and
	  FixedWidthWrapLabel.

2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Attempt to fix
	  major "Bug 382141 - ALL keypresses are intepreted as newlines" by
	  reworking input method context handling.

2008-04-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: fixed keyboard
	  input.

2008-04-16  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Track API change.
	  Remove char code translation hack.
	* MonoDevelop.SourceEditor/SourceEditorView.cs: Break up overly long
	  line.

2008-04-16  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Removed work
	  around.

2008-04-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs: Handle mime
	  types with xml subtype.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Track API.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 
