@@ -1,3 +1,8 @@
+2008-05-06  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
+	  MonoDevelop.SourceEditor/SearchWidget.cs: Worked on regex search.
+
 2008-05-02  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor/EditActions.cs: fixed Bug 383946 – Text
